force-app/main/default/objects/AssortmentProduct/AssortmentProduct.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>