force-app/main/default/objects/AssortmentProduct/fields/cgcloud__Account_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Product_Number__c</fullName>
    <description>Customer specific product number.</description>
    <label>Customer Product Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>