force-app/main/default/objects/AssortmentProduct/fields/cgcloud__Facings__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Facings__c</fullName>
    <description>Target Value for primary survey question &apos;Facings&apos;.</description>
    <label>Facings</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>