force-app/main/default/objects/AssortmentProduct/fields/cgcloud__Focus_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Focus_Product_Type__c</fullName>
    <description>Defines focus product type.</description>
    <label>Focus Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>Top10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>