force-app/main/default/objects/AssortmentProduct/fields/cgcloud__Price_Survey__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price_Survey__c</fullName>
    <description>Target Value for primary survey question &apos;Price Survey&apos;.</description>
    <label>Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>