force-app/main/default/objects/AssortmentProduct/validationRules/cgcloud__Sales_Org_should_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same</fullName>
    <active>true</active>
    <description>The Product and the Product Assortment must have the same Sales Org.</description>
    <errorConditionFormula>Product.cgcloud__Sales_Org__c &lt;&gt;  Assortment.cgcloud__Sales_Org__c</errorConditionFormula>
    <errorMessage>The Product and the Product Assortment must have the same Sales Org.</errorMessage>
</ValidationRule>